--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,8 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
+            "Authentication\\": "src/Authentication/",
+            "Notification\\": "src/Notification/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         }
