--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.65",
         "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "lcobucci/jwt": "^4.1"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.7",
@@ -25,7 +26,6 @@
         "psr-4": {
             "App\\": "app/",
             "Authentication\\": "src/Authentication/",
-            "Notification\\": "src/Notification/",
             "Shared\\": "src/Shared/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
