--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,4 +1,8 @@
+FROM composer:2.2.7 as composer
+
 FROM php:8.0-fpm
+
+COPY --from=composer /usr/bin/composer /usr/bin/composer
 
 RUN apt-get update
 
