--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,8 @@ services:
             -   auth-php
     auth-php:
         build:
-            context: ./docker/php
+            context: .
+            dockerfile: docker/php/Dockerfile
         user: "${UID}:${GID}"
         container_name: auth-php
         working_dir: /var/www
@@ -40,11 +41,6 @@ services:
             - auth-network
         depends_on:
             - auth-db
-    auth-mailhog:
-        image: mailhog/mailhog
-        container_name: auth-mailhog
-        ports:
-            - "8025:8025"
 
 volumes:
     auth-db:
