--- a/.env.example
+++ b/.env.example
@@ -37,4 +37,5 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="Authentication microservice"
 
-JWT_TOKEN=8YDQFso34faZ2DFY7oyW
+JWT_PUBLIC_KEY_FILENAME=rsa.pub
+JWT_PRIVATE_KEY_FILENAME=rsa
