--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,7 @@ services:
         build:
             context: .
             dockerfile: docker/development/php8.2/Dockerfile
-        user: "1000:1000"
+        user: "${USER_ID}:${GROUP_ID}"
         container_name: auth-php
         working_dir: /var/www
         volumes:
