--- a/.env.example
+++ b/.env.example
@@ -37,5 +37,5 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="Authentication microservice"
 
-JWT_PUBLIC_KEY_FILENAME=rsa.pub
-JWT_PRIVATE_KEY_FILENAME=rsa
+JWT_PUBLIC_KEY_FILENAME=public.pem
+JWT_PRIVATE_KEY_FILENAME=key.pem
