--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
         image: mysql:8.0
         container_name: auth-db
         volumes:
-            -   auth-db:/var/lib/mysql
+            - auth-db:/var/lib/mysql
         ports:
-            -   "3306:3306"
+            - "3306:3306"
         networks:
             - auth-network
         environment:
@@ -28,18 +28,18 @@ services:
             MYSQL_USER: 'user'
             MYSQL_PASSWORD: 'secret'
     auth-webserver:
-        image: nginx:1.9.15
+        image: nginx:1.22-alpine
         container_name: auth-webserver
         working_dir: /var/www
         volumes:
-            -   ./:/var/www
-            -   ./docker/nginx:/etc/nginx/conf.d
+            - ./:/var/www
+            - ./docker/development/nginx:/etc/nginx/conf.d
         ports:
-            -   "8000:80"
+            - "8000:80"
         networks:
             - auth-network
         depends_on:
-            -   auth-php
+            - auth-php
     auth-php:
         build:
             context: .
@@ -48,7 +48,7 @@ services:
         container_name: auth-php
         working_dir: /var/www
         volumes:
-            -   ./:/var/www
+            - ./:/var/www
         networks:
             - auth-network
         depends_on:
