Allow enable/disabled authorized host in config

--- a/.env.example
+++ b/.env.example
@@ -39,3 +39,5 @@ MAIL_FROM_NAME="Authentication microservice"
 
 JWT_PUBLIC_KEY_FILENAME=public.pem
 JWT_PRIVATE_KEY_FILENAME=key.pem
+
+ENABLE_AUTHORIZED_HOST=false
