--- a/docker/production/nginx/default.conf
+++ b/docker/production/nginx/default.conf
@@ -1,31 +1,73 @@
 server {
     listen 80;
-    root /var/www/public;
+    index index.html index.php;
+    gzip on;
+    gzip_disable "msie6";
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+    root /var/www/frontend;
 
-    add_header X-Frame-Options "SAMEORIGIN";
-    add_header X-XSS-Protection "1; mode=block";
-    add_header X-Content-Type-Options "nosniff";
 
-    index index.php;
-
-    charset utf-8;
-
-    location / {
-        try_files $uri $uri/ /index.php?$query_string;
+    location ~ \.css
+    {
+      add_header Content-Type text/css;
     }
 
-    location = /favicon.ico { access_log off; log_not_found off; }
-    location = /robots.txt  { access_log off; log_not_found off; }
-
-    error_page 404 /index.php;
-
-    location ~ \.php$ {
-        fastcgi_pass 127.0.0.1:9000;
-        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
-        include fastcgi_params;
+    location ~ \.js
+    {
+      add_header Content-Type application/javascript;
     }
 
-    location ~ /\.(?!well-known).* {
-        deny all;
+    location /
+    {
+      expires -1;
+      add_header Pragma "no-cache";
+      add_header Cache-Control "no-store, no-cache, must-revalidate, post-check=0, pre-check=0";
+      try_files $uri $uri/ /index.html;
     }
+
+    location ~* \.(?:manifest|appcache|html?|xml|json)$
+    {
+      expires -1;
+    }
+
+    location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc)$
+    {
+      expires 1M;
+      access_log off;
+      add_header Cache-Control "public";
+    }
+
+    location ~* \.(?:css|js)$
+    {
+      expires 1d;
+      access_log off;
+      add_header Cache-Control "public";
+    }
+
+    error_log  /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log;
+
+    location ^~ /api {
+        alias /var/www/api/public;
+        try_files $uri $uri/ @api;
+
+        location ~ \.php {
+             try_files $uri /index.php =404;
+                fastcgi_pass 127.0.0.1:9000;
+                fastcgi_read_timeout 300;
+                fastcgi_param DOCUMENT_ROOT $realpath_root;
+                client_max_body_size 200M;
+                fastcgi_index index.php;
+                fastcgi_param SCRIPT_FILENAME  /var/www/api/public/index.php;
+                fastcgi_buffer_size 128k;
+                fastcgi_buffers 4 256k;
+                fastcgi_busy_buffers_size 256k;
+                include fastcgi_params;
+        }
+    }
+
+    location @api {
+        rewrite /api/(.*)$ /api/index.php?/$1 last;
+    }
+
 }
