--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,6 +1,10 @@
 name: Tests
 
-on: [workflow_call, pull_request]
+on:
+  pull_request:
+  push:
+    branches:
+      - main
 
 jobs:
   laravel-tests:
