--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,7 +21,7 @@ jobs:
         run: sleep 2 && echo "Hola Mundo1"
   hola-mundo2:
     runs-on: ubuntu-latest
-    needs: [hola-mundo1]
+    needs: [hola-mundo]
     steps:
       - name: "Hola Mundo2"
         run: sleep 2 && echo "Hola Mundo2"
