--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,18 +1,16 @@
 name: Deploy
 
 on:
-  workflow_run:
-    workflows: ["Tests"]
-    branches: [main]
-    types:
-      - completed
+  push:
+    branches: [ "main" ]
 
 jobs:
 
   tests:
-    uses: ./.github/workflows/tests.yml
+    uses: Tomi0/auth-microservice/.github/workflows/tests.yml@main
   build:
     runs-on: ubuntu-latest
+    needs: [tests]
     steps:
       - uses: actions/checkout@v3
       - name: Build the Docker image
