--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,11 +1,6 @@
 name: Tests
 
-on:
-  pull_request:
-  push:
-    branches:
-      - main
-      - develop
+on: [pull_request, workflow_call]
 
 jobs:
   laravel-tests:
