--- a/docker/nginx/backend.conf
+++ b/docker/nginx/backend.conf
@@ -1,9 +1,8 @@
 server {
-    listen 80;
-    root /var/www/public;
+    listen 8080;
+    root /var/www/api/public;
 
     add_header X-Frame-Options "SAMEORIGIN";
-    add_header X-XSS-Protection "1; mode=block";
     add_header X-Content-Type-Options "nosniff";
 
     index index.php;
@@ -20,9 +19,10 @@ server {
     error_page 404 /index.php;
 
     location ~ \.php$ {
-        fastcgi_pass auth-php:9000;
+        fastcgi_pass 127.0.0.1:9000;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         include fastcgi_params;
+        fastcgi_hide_header X-Powered-By;
     }
 
     location ~ /\.(?!well-known).* {
